--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
     "gatsby-plugin-sharp": "^5.8.1",
     "gatsby-source-filesystem": "^5.8.0",
     "gatsby-transformer-sharp": "^5.8.0",
+    "@vanilla-extract/babel-plugin": "^1.2.0",
+    "@vanilla-extract/css": "^1.9.0",
+    "@vanilla-extract/css-utils": "^0.1.2",
+    "@vanilla-extract/webpack-plugin": "^2.1.12",
+    "gatsby-plugin-vanilla-extract": "^4.0.1",
+    "react-feather": "^2.0.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@fontsource/dm-mono": "^4.5.9",
+    "@fontsource/dm-sans": "^4.5.8"
   },
   "devDependencies": {
     "prettier": "^2.8.7"
